force-app/main/default/objects/Supporting_Document_Check__c/Supporting_Document_Check__c.object-meta.xml
<CustomObject>
    <label>Supporting Document Check</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Supporting Document Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Document Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>