force-app/main/default/objects/Supporting_Document_Check__c/fields/document_check__c.field-meta.xml
<CustomField>
    <fullName>document_check__c</fullName>
    <formula>document_check_id__r.check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>document check</label>
    <type>Text</type>
</CustomField>