force-app/main/default/objects/Supporting_Document_Check__c/fields/document_check_id__c.field-meta.xml
<CustomField>
    <fullName>document_check_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>document check Id</label>
    <referenceTo>document_check__c</referenceTo>
    <relationshipLabel>Supporting Document Checks</relationshipLabel>
    <relationshipName>Supporting_Document_Checks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>