force-app/main/default/objects/Supporting_Document_Check__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>