force-app/main/default/objects/Supporting_Document_Check__c/fields/Map_Supporting_Doc__c.field-meta.xml
<CustomField>
    <fullName>Map_Supporting_Doc__c</fullName>
    <formula>text(Map_Supporting_Doc_id__r.Document_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Supporting Doc</label>
    <type>Text</type>
</CustomField>