force-app/main/default/objects/Supporting_Document_Check__c/fields/Map_Supporting_Doc_id__c.field-meta.xml
<CustomField>
    <fullName>Map_Supporting_Doc_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Map Supporting Doc ID</label>
    <referenceTo>Map_Supporting_Doc__c</referenceTo>
    <relationshipLabel>Supporting Document Checks</relationshipLabel>
    <relationshipName>Supporting_Document_Checks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>